moisture level saved in db
