# server/Application/Models/Dtos/RestDtos/PlantDtos/CreatePlantDto.cs
@@ -5,5 +5,7 @@ public class CreatePlantDto
     public string PlantName { get; set; } = null!;
     public string PlantType { get; set; } = null!;
     public float MoistureThreshold { get; set; }
+    public float MoistureLevel { get; set; } 
+
     public bool IsAutoWateringEnabled { get; set; }
 }
