# server/Application/Models/Dtos/RestDtos/PlantDtos/PlantResponseDto.cs
@@ -1,0 +1,14 @@
+using System.ComponentModel.DataAnnotations;
+
+namespace Application.Models.Dtos.RestDtos.PlantDtos;
+
+public class PlantResponseDto
+{
+    [Required]public Guid Id { get; set; }
+    [Required]public string PlantName { get; set; }
+    [Required]public string PlantType { get; set; }
+    [Required]public double MoistureLevel { get; set; } 
+    [Required]public float MoistureThreshold { get; set; }
+
+    [Required]public bool IsAutoWateringEnabled { get; set; }
+}
